# mcptutorial

./: calculator.py  client.py  pyproject.toml  requirements.txt  weather.py
