[project]
name = "mcptutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.1.10",
    "langgraph==0.6.7",
    "mcp>=1.14.1",
    "ragas>=0.3.5",
    "streamlit==1.49.1",
    "structlog==25.4.0",
    "undetected-chromedriver==3.5.5",
    "uvicorn==0.35.0",
]
